# guile-zmq

./: AUTHORS  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac  env.in  zmq.scm
doc/: Makefile.am  guile-zmq.texi
guile-zmq/: Makefile.am  guile-zmq.c  guile-zmq.h
zmq/: Makefile.am  config.scm.in
